--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The ros_figaro package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="svetlin@todo.todo">svetlin</maintainer>
@@ -46,13 +46,14 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>python-numpy</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
-
+  <run_depend>python-numpy</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
